// Copyright 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pkg.aspect.config;

option go_package="config";

// Configures a quotas aspect.
message QuotasParams {
    message Quota {
        // Must match the name of some quota_descriptor in the global config.
        string descriptor_name = 1;

        // Map of quota_descriptor label name to attribute expression. At run time each
        // expression will be evaluated to determine the value provided to the aspect. The
        // result of evaluating the expression must match the ValueType of the label in the quota_descriptor.
        map<string, string> labels = 3;
    }

    // The set of quotas that will be populated and handed to aspects at run time.
    repeated Quota quotas = 1;
}
